--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -3,3 +3,40 @@
     text-decoration: none;
     
 }
+
+.form-check-input {
+    width: 1.3em;
+    height: 1.3em;
+    margin-top: 0.25em;
+    border: 3px solid var(--primary-color) !important;
+}
+
+.form-check-input:checked {
+    background-color: var(--primary-color) !important;
+    border-color: var(--primary-color) !important;
+}
+
+.form-check-label {
+    font-weight: 500;
+}
+
+.btn-outline-dark:hover {
+    background-color: var(--btn-hover1) !important;
+}
+.custom-scroll{
+padding-right: 10px; 
+background-clip: content-box;
+}
+.custom-scroll::-webkit-scrollbar {
+width: 8px;
+overflow: auto;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+background-color: var(--primary-color);
+border-radius: 4px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb:hover {
+background-color: var( --btn-hover1);
+}
