--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -40,3 +40,13 @@ border-radius: 4px;
 .custom-scroll::-webkit-scrollbar-thumb:hover {
 background-color: var( --btn-hover1);
 }
+
+.buy-btn{
+    background-color: var(--primary-color)!important;
+    color: white;
+}
+
+.buy-btn:hover{
+    background-color: var(--btn-hover1)!important;
+    color: white;
+}
