--- a/assets/css/menu-management.css
+++ b/assets/css/menu-management.css
@@ -3,9 +3,14 @@ html {
     height: auto;
     overflow-x: hidden;
     overflow-y: auto;
-    background-color: var(--card-bg-color)
+    background-color: var(--secondary-color)
 }
 
+.cardMain{
+    background-color: var(--card-bg-color);
+    border-radius: 20px;
+    border: 1px solid rgba(0, 0, 0, 0.125) !important;
+}
 
 .mainContainer {
     width: 100%;
@@ -15,20 +20,111 @@ html {
     background-color: var(--card-bg-color)
 }
 
-.product-container {
-    width: 100%;
-    height: 700px;
-    overflow-y: auto;
-    overflow-x: hidden;
+input.form-control[aria-label="search-bar"] {
+    border-radius: 12px !important;
+    font-family: var(--secondaryFont) !important;
+    font-size: var(--lead) !important;
 }
 
+.btnAdd{
+    background-color: var(--primary-color);
+    border-radius: 12px;
+    font-family: var(--secondaryFont);
+    font-size: var(--lead);
+    color: var(--text-color-light);
+}
+
+button.btn.btnAdd:hover {
+    background-color: #945400ea !important;
+    color: white !important;
+}
+
+select.form-select {
+    border-radius: 12px !important;
+    font-family: var(--secondaryFont) !important;
+    font-size: var(--lead) !important;
+    color: var(--text-color-dark);
+}
 
 .search {
-    max-width: 240px;
+    width: 100%
 }
+
+.menu-item {
+    background-color: var(--card-bg-color);
+    border-radius: 12px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 250px;
+    min-height: 350px;
+    font-family: var(--secondaryFont);
+    font-size: var(--lead);
+    color: var(--text-color-dark);
+}
+
+
+.menu-item:hover {
+    transform: scale(1.03);
+    transition: transform 0.2s ease;
+}
+
+
+.menu-img {
+    max-height: 150px;
+    object-fit: contain;
+    width: 100%;
+}
+
+.menu-name,
+.menu-price {
+    word-wrap: break-word;
+    text-align: center;
+}
+
+.btn-sm {
+  background-color: var(--primary-color);
+  border-radius: 12px;
+  font-family: var(--secondaryFont);
+  color: var(--text-color-light);
+}
+
+
+.btn-sm:hover{
+    transform: scale(1.03);
+    transition: transform 0.2s ease;
+}
+
+button.btn.btn-sm:hover {
+  background-color: #945400ea !important;
+  color: white !important;
+}
+
+button.btn.btn-del:hover {
+  background-color: var(--text-color-dark) !important;
+  color: white !important;
+}
+
+.btn-sm.show,
+.btn-sm:active {
+  background-color: var(--primary-color) !important;
+  color: var(--text-color-light) !important;
+}
+
+.modalText{
+font-family: var(--secondaryFont);
+  color: var(--text-color-dark);
+}
+
 
 @media (max-width: 576px) {
     .search {
         max-width: 100%;
     }
 }
+
+
+ 
+
