--- a/assets/css/sales-and-report.css
+++ b/assets/css/sales-and-report.css
@@ -77,6 +77,7 @@ h4 {
 .cardStats {
   border-radius: 12px;
   border: 1px solid rgba(0, 0, 0, 0.125) !important;
+  width: 100%;
 }
 
 .cardContainer {
@@ -98,6 +99,7 @@ input.form-control[aria-label="search-bar"] {
   font-family: var(--secondaryFont);
   font-size: var(--lead);
   color: var(--text-color-light);
+  width: 100%;
 }
 
 .btn-dropdown.show,
@@ -110,6 +112,7 @@ button.btn.btn-dropdown:hover {
   background-color: var(--btn-hover1) !important;
   color: white !important;
 }
+
 .dropdown-item {
   transition: background-color 0.2s ease, color 0.2s ease;
 }
@@ -125,6 +128,8 @@ button.btn.btn-dropdown:hover {
   font-family: var(--secondaryFont);
   font-size: var(--lead);
   color: var(--text-color-light);
+  width: 100%;
+  border-radius: 10px;
 }
 
 .excelBtn.show,
