--- a/assets/css/admin_home.css
+++ b/assets/css/admin_home.css
@@ -164,4 +164,38 @@ footer p {
     font-size: var(--h6);
 }
 
+.stock-modal {
+    border-radius: 20px;
+    border: none;
+    background-color: var(--card-bg-color);
+    box-shadow: 0 6px 25px rgba(0, 0, 0, 0.2);
+    font-family: var(--primaryFont);
+    color: var(--text-color-dark);
+}
+
+.stock-modal .modal-title {
+    color: var(--primary-color);
+    font-weight: 700;
+}
+
+.stock-modal .list-group-item {
+    border: none;
+    font-size: var(--lead);
+    font-family: var(--secondaryFont);
+    background: transparent;
+}
+
+.notification-bell {
+      position: relative;
+    }
+    .notification-badge {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 12px;
+      height: 12px;
+      background: red;
+      border-radius: 50%;
+      border: 2px solid white;
+    }
 
